--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jexl",
-  "version": "2.1.1",
+  "name": "@aloi/jexl",
+  "version": "0.1.0",
   "description": "Javascript Expression Language: Powerful context-based expression parser and evaluator",
   "main": "lib/Jexl.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/TomFrost/jexl"
+    "url": "https://github.com/aloi-io/jexl"
   },
   "keywords": [
     "JSON",
@@ -26,9 +26,9 @@
   "author": "Tom Shawver <tom@frosteddesign.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TomFrost/jexl/issues"
+    "url": "https://github.com/aloi-io/jexl/issues"
   },
-  "homepage": "https://github.com/TomFrost/jexl",
+  "homepage": "https://github.com/aloi-io/jexl",
   "devDependencies": {
     "jest": "^23.6.0",
     "standard": "^12.0.1"
